# robot_navigation

./: README.md
follow_human/follow_start/: CMakeLists.txt  package.xml
follow_human/follow_start/launch/: .follow_me.launch.swp  follow_me.launch
follow_human/human_follower/: CMakeLists.txt  package.xml
follow_human/human_follower/src/: human_follower_node.cpp
follow_human/leg_finder/: CMakeLists.txt  package.xml
follow_human/leg_finder/src/: leg_finder_node.cpp
hardware/arm/: CMakeLists.txt  package.xml
hardware/arm/src/: arm_node.cpp  (+1 more)
hardware/head/: CMakeLists.txt  package.xml
hardware/point_cloud/: CMakeLists.txt  package.xml
hardware/point_cloud/src/: passthrough.cpp  plane_detector.cpp
hardware/point_cloud/srv/: PointCloudFilter.srv
hsr_hector/: CMakeLists.txt  README.md  estimate.py  package.xml
hsr_hector/launch/: default_mapping.launch  hector_hsr.rviz  hsr_hector.launch
hsr_hector/shell/: make_map.sh
hsr_tools/common/: CMakeLists.txt  README.md  package.xml  setup.py
hsr_tools/navigation_tools/: CMakeLists.txt  package.xml
hsr_tools/robot_tasks/: CMakeLists.txt  package.xml
navigation/augment_gridmap_online/: CMakeLists.txt  README.md  package.xml
navigation/bypass_cartographer_map/: CMakeLists.txt  package.xml
navigation/map_server_bypass/: CMakeLists.txt  package.xml
navigation/navig_msgs/: CMakeLists.txt
navigation/navigation_start/: CMakeLists.txt  package.xml
navigation/node_killer/: CMakeLists.txt  package.xml
navigation/obstacle_detector/: CMakeLists.txt
navigation/potential_fields/: CMakeLists.txt  package.xml
navigation/simple_move/: CMakeLists.txt  package.xml
navigation_tools/: setup.py
(+68 files in other folders)
